added extra animations

--- a/project.html
+++ b/project.html
@@ -408,6 +408,19 @@
             "Custom hardware controller",
           ],
         },
+        {
+          id: "5",
+          title: "Extraterrestrial Escape",
+          img: "diamond.png",
+          video: "demo5.mp4",
+          desc: "EE is a stealth-based game where you play as an alien who has crash-landed on Earth. To survive and escape, you must navigate unfamiliar environments, avoid detection by humans, and recover scattered ship parts to send a distress signal and return home. Developed as part of my coursework, this group project was completed in a small team of four, where I took on a leadership role. The experience significantly strengthened my collaboration, communication, and leadership abilities while deepening my technical skills in game development. Throughout the project, I worked on implementing enemy AI state machines, navigation meshes, health systems for both players and enemies, user interface design, level design, and player mechanics such as a flashlight system and interactive objects.",
+          features: [
+            "Unity development",
+            "Leadership",
+            "Level design",
+            "Programming",
+          ],
+        },
       ];
       function renderProjects() {
         const container = document.getElementById("projects-list");
@@ -438,5 +451,6 @@
       }
       renderProjects();
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
